--- a/recursion/recursion02.dSYM/Contents/Resources/Relocations/aarch64/recursion02.yml
+++ b/recursion/recursion02.dSYM/Contents/Resources/Relocations/aarch64/recursion02.yml
@@ -2,7 +2,7 @@
 triple:          'arm64-apple-darwin'
 binary-path:     '/Users/meerahbinteliah/Desktop/programming-self-study/excersizes/recursion/recursion02'
 relocations:
-  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x100003F2C, symSize: 0x1C }
-  - { offsetInCU: 0x33, offset: 0x33, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x100003F2C, symSize: 0x1C }
-  - { offsetInCU: 0x4C, offset: 0x4C, size: 0x8, addend: 0x0, symName: _fib, symObjAddr: 0x1C, symBinAddr: 0x100003F48, symSize: 0x60 }
+  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x100003ED0, symSize: 0x3C }
+  - { offsetInCU: 0x41, offset: 0x41, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x100003ED0, symSize: 0x3C }
+  - { offsetInCU: 0x5A, offset: 0x5A, size: 0x8, addend: 0x0, symName: _fib, symObjAddr: 0x3C, symBinAddr: 0x100003F0C, symSize: 0x8C }
 ...
